Fix: style z-index to navbar

--- a/projects/3-components/01-navbars/02-navbar2/css/style.css
+++ b/projects/3-components/01-navbars/02-navbar2/css/style.css
@@ -30,18 +30,9 @@ a{
     min-height: 100vh;
     position: relative;
     padding-top: 5rem;
-    z-index: -1;
+    z-index: 0;
 }
-.header_site::before{
-    content: '';
-    position: absolute;
-    top: 0;
-    right: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-image: linear-gradient(to right,rgba(0, 0, 0,0.8) 50%,rgba(255, 233, 233,0.4));
-}
+
 .container{
     position: relative;
     z-index: 100;
@@ -49,7 +40,7 @@ a{
     margin: 0 auto;
 }
 .navgation_menu{
-    background-color: rgba(255,255,255, 0.1);
+    background-color: rgba(0,0,0, 0.7);
     backdrop-filter: blur(7px);
     border-radius: 20px;
     display: flex;
@@ -62,23 +53,16 @@ a{
 }
 .navgation_menu > li::after{
     content: '';
-    content: '';
     display: block;
     border-bottom: 3px solid #f6364b;
     transform: scaleX(0);
     margin-top: 8px;
     transition: transform 250ms ease-in-out;
-    -webkit-transition: transform 250ms ease-in-out;
-    -moz-transition: transform 250ms ease-in-out;
-    -ms-transition: transform 250ms ease-in-out;
-    -o-transition: transform 250ms ease-in-out;
+ 
 }
 .navgation_menu > li:hover::after{
     transform: scaleX(1);
-    -webkit-transform: scaleX(1);
-    -moz-transform: scaleX(1);
-    -ms-transform: scaleX(1);
-    -o-transform: scaleX(1);
+
 }
 .navgation_menu  li a {
     color: #fff;
@@ -96,24 +80,17 @@ a{
     width: 7px;
     position: absolute;
     right: 105%;
-    top: 43%;
+    top: 36%;
     transform: rotate(42deg);
     transition: transform 0.15s ease-in-out;
-    -webkit-transition: transform 0.15s ease-in-out;
-    -moz-transition: transform 0.15s ease-in-out;
-    -ms-transition: transform 0.15s ease-in-out;
-    -o-transition: transform 0.15s ease-in-out;
 }
 .arrow_icon:hover::before{
     transform: rotate(218deg);
-    -webkit-transform: rotate(218deg);
-    -moz-transform: rotate(218deg);
-    -ms-transform: rotate(218deg);
-    -o-transform: rotate(218deg);
+
 }
 
 .sub_menu{
-    background-color: rgba(255 , 255 , 255,0.3);
+    background-color: rgba(0 , 0 , 0,0.7);
     backdrop-filter: blur(30px);
     position: absolute;
     border-radius: 20px;
@@ -123,10 +100,6 @@ a{
     visibility: hidden;
     pointer-events: none;
     transition: opacity 0.15s ease-in-out;
-    -webkit-transition: opacity 0.15s ease-in-out;
-    -moz-transition: opacity 0.15s ease-in-out;
-    -ms-transition: opacity 0.15s ease-in-out;
-    -o-transition: opacity 0.15s ease-in-out;
 }
 .navgation_menu > li > ul.sub_menu{
     top: 59px;
@@ -136,10 +109,7 @@ ul.sub_menu li a{
     display: block;
     padding: 12px;
     transition: all 0.15s ease-in-out;
-    -webkit-transition: all 0.15s ease-in-out;
-    -moz-transition: all 0.15s ease-in-out;
-    -ms-transition: all 0.15s ease-in-out;
-    -o-transition: all 0.15s ease-in-out;
+
 }
 ul.sub_menu li a:hover{
    background-color: #eee;
